adding jquery plugin

--- a/index.html
+++ b/index.html
@@ -1,102 +1,139 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-  <title>Hikmat Dhamee from Nepal</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./css/index.css">
-</head>
-<body>
+   <head>
+     <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+        <meta charset="utf-8">  
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+        <script type='text/javascript' src="./js/jquery.min.js">
+        </script>
+        <script type='text/javascript' src="./js/bootstrap.min.js">
+        </script>
+      <link rel="stylesheet" type="text/css" href="./css/index.css">
+   </head>
+   <body>
       <div class="container">
-            <div class="row">
-                  <div class="col-md-3"> 
-                    <a href="#">
-                        <div id="logo_link" class="logo"></div>
-                        <p>Hi, I am Hikmat Dhamee from Nepal, the software        
-                           enthusiastic
-                                    
-		    </a>
-                  </div>
-                  <div class="col-md-6">.</div>
-                  <div class="col-md-3">.</div>            
+         <div class="row">
+            <div class="col-md-3">
+               <a href="#">
+                  <div id="logo_link" class="logo"></div>
+                  <p>Hi, I am Hikmat Dhamee from Nepal, the software        
+                     enthusiastic</p>
+               </a>
             </div>
-            <div class="row">
-	  	<div class="container">
-		        <div class="row">
-			   <div class="col-md-3"></div>
-			   <div class="col-md-2">
-			        <a href="http://github.com/mehikmat" target="_blank">
-				   <div id="github_link" class="github"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-2">
-			        <a href="https://np.linkedin.com/in/hikmatdhamee" target="_blank">
-				   <div id="linkedin_link" class="linkedin"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-2">
-			        <a href="https://plus.google.com/+HikmatDhamee" target="_blank">
-				   <div id="googleplus_link" class="googleplus"></div>                    
-			        </a>
-			   </div>             
-			   <div class="col-md-3"></div>
-		        </div>
-		        <div class="row">
-			     <div class="col-md-3"></div>	    
-			   <div class="col-md-2">
-			        <a href="http://facebook.com/hikmatdhamee" target="_blank">
-				   <div id="facebook_link" class="facebook"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-2">
-			        <a href="https://twitter.com/mehikmat" target="_blank">
-				   <div id="twitter_link" class="twitter"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-2">
-			        <a href="http://whiteboxdeveloper.blogspot.com" target="_blank">
-				   <div id="blog_link" class="blog"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-3"></div>
-			</div>
-			<div class="row">
-			     <div class="col-md-3"></div>	    
-			   <div class="col-md-2">
-			        <a href="http://www.slideshare.net/HikmatDhamee" target="_blank">
-				   <div id="slideshare_link" class="slideshare"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-2">
-			        <a href="https://coderwall.com/mehikmat" target="_blank">
-				   <div id="coderwall_link" class="coderwall"></div>                    
-			        </a>
-			   </div>             <div class="col-md-2">
-			        <a href="http://stackoverflow.com/users/1966595/mehikmat" target="_blank">
-				   <div id="stackoverflow_link" class="stackoverflow"></div>                    
-			        </a>
-			   </div>
-			   <div class="col-md-3"></div>
-			</div>
-		 </div>
-	       </div>
-	       <br/>
-	       <div class="row">
-	             <div class="col">
-	                   <div class="line">.</div>
-	             </div>
-	       </div>
-	       <div class="row">
-	             <div class="col-md-4"><p>.<p></div>
-	             <div class="col-md-6">
-	                 <a href="#"><p>Copyright &copy 2014 Hikmat Dhamee<br/>
-	                            Email me: contact@hikmatdhamee.com.np </p>
-	                 </a>
-	             </div>
-	             <div class="col-md-2"></div>
-	       </div>
-	</div>
-      </div>
-</body>
+            <div class="col-md-6">.</div>
+            <div class="col-md-3">.</div>
+         </div>
+         <div class="row">
+            <div class="col-md-2">.</div>
+            <div class="col-md-8">              
+               <div class="row">
+                     <div class="col-lg-12">
+                        <ul class="nav nav-tabs">
+                           <li class="active"><a href="#A" data-toggle="tab">Comtact Me</a></li>
+                           <li><a href="#B" data-toggle="tab">My Readings</a></li>
+                           <li><a href="#C" data-toggle="tab">Links</a></li>
+                        </ul>
+                        <div class="tabbable">
+                           <div class="tab-content">
+                              <div class="tab-pane active" id="A">
+                                 <div class="container">
+                                    <div class="row">
+                                       <div class="col-md-2">
+                                          <a href="http://github.com/mehikmat" target="_blank">
+                                             <div id="github_link" class="github"></div>
+                                          </a>
+                                       </div>
+                                       <div class="col-md-2">
+                                          <a href="https://np.linkedin.com/in/hikmatdhamee" target="_blank">
+                                             <div id="linkedin_link" class="linkedin"></div>
+                                          </a>
+                                       </div>
+                                       <div class="col-md-2">
+                                          <a href="https://plus.google.com/+HikmatDhamee" target="_blank">
+                                             <div id="googleplus_link" class="googleplus"></div>
+                                          </a>
+                                       </div>
+                                    </div>
+                                    <div class="row">
+                                       <div class="col-md-2">
+                                          <a href="http://facebook.com/hikmatdhamee" target="_blank">
+                                             <div id="facebook_link" class="facebook"></div>
+                                          </a>
+                                       </div>
+                                       <div class="col-md-2">
+                                          <a href="https://twitter.com/mehikmat" target="_blank">
+                                             <div id="twitter_link" class="twitter"></div>
+                                          </a>
+                                       </div>
+                                       <div class="col-md-2">
+                                          <a href="http://whiteboxdeveloper.blogspot.com" target="_blank">
+                                             <div id="blog_link" class="blog"></div>
+                                          </a>
+                                       </div>
+                                    </div>
+                                    <div class="row">
+                                       <div class="col-md-2">
+                                          <a href="http://www.slideshare.net/HikmatDhamee" target="_blank">
+                                             <div id="slideshare_link" class="slideshare"></div>
+                                          </a>
+                                       </div>
+                                       <div class="col-md-2">
+                                          <a href="https://coderwall.com/mehikmat" target="_blank">
+                                             <div id="coderwall_link" class="coderwall"></div>
+                                          </a>
+                                       </div>
+                                       <div class="col-md-2">
+                                          <a href="http://stackoverflow.com/users/1966595/mehikmat" target="_blank">
+                                             <div id="stackoverflow_link" class="stackoverflow">
+                                             </div>
+                                          </a>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>                           
+                              <div class="tab-pane" id="B">
+                                 <p id="icon"></p>
+                                 <script>
+                                    function handleResponse(response) {
+                                    for (var i = 0; i < response.items.length; i++) {
+                                    var item = response.items[i];        
+                                    document.getElementById("icon").innerHTML += "<a href=" +          
+                                                                  item.volumeInfo.previewLink + "class=imageLink ><img class=ani src=" +  
+                                                                  item.volumeInfo.imageLinks.smallThumbnail + "></img></a>";
+                                    }
+                                    }
+                                 </script>
+                                 <script src="https://www.googleapis.com/books/v1/volumes?q=Java+Hadoop&callback=handleResponse&maxResults=40">
+                                 </script>   
+                              </div>
+                              <div class="tab-pane" id="C">                              
+                                <p>Links</p>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                     <!-- /tabbable -->      
+               </div> 
+            <div class="col-md-2">.</div>
+         </div>        
+         <br/> 
+         <div class="row">
+            <div class="col-md-12">
+               <div class="line">.</div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-4"><p>.<p></div>
+            <div class="col-md-6">
+               <a href="#">
+                  <p>Copyright &copy 2014 Hikmat Dhamee<br/>
+                     Email me: contact@hikmatdhamee.com.np 
+                  </p>
+               </a>
+            </div>
+            <div class="col-md-2"></div>
+         </div> 
+      </div>      
+   </body>
 </html>
