adding name image

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
      <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
         <meta charset="utf-8">  
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+        <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <script type='text/javascript' src="./js/jquery.min.js">
         </script>
         <script type='text/javascript' src="./js/bootstrap.min.js">
         </script>
-      <link rel="stylesheet" type="text/css" href="./css/index.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
+        <link href='http://fonts.googleapis.com/css?family=Schoolbell&v1' rel='stylesheet' type='text/css'>
    </head>
    <body>
       <div class="container">
          <div class="row">
             <div class="col-md-3">
                <a href="#">
-                  <div id="logo_link" class="logo"></div>
-                  <p>Hi, I am Hikmat Dhamee from Nepal, the software        
-                     enthusiastic</p>
+                  <div id="logo_link" class="logo"></div>                  
                </a>
             </div>
-            <div class="col-md-6">.</div>
+            <div class="col-md-6">
+               <div class="myname">.</div>
+            </div>
             <div class="col-md-3">.</div>
          </div>
          <div class="row">
@@ -30,13 +31,14 @@
                <div class="row">
                      <div class="col-lg-12">
                         <ul class="nav nav-tabs">
-                           <li class="active"><a href="#A" data-toggle="tab">Comtact Me</a></li>
+                           <li ><a href="#A" data-toggle="tab">My Profiles</a></li>
                            <li><a href="#B" data-toggle="tab">My Readings</a></li>
-                           <li><a href="#C" data-toggle="tab">Links</a></li>
+                           <li><a href="#C" data-toggle="tab">Contact Me</a></li>
+                           <li class="active"><a href="#D" data-toggle="tab">About Me</a></li>
                         </ul>
                         <div class="tabbable">
                            <div class="tab-content">
-                              <div class="tab-pane active" id="A">
+                              <div class="tab-pane" id="A">
                                  <div class="container">
                                     <div class="row">
                                        <div class="col-md-2">
@@ -108,8 +110,9 @@
                                  </script>   
                               </div>
                               <div class="tab-pane" id="C">                              
-                                <p>Links</p>
+                               <iframe src="https://docs.google.com/forms/d/1ZYnFFTzojg0jtHJuzcF_F5zx6Eeu6iKtppIrf9t6g8M/viewform?embedded=true" width="760" height="510" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>                           
                               </div>
+                              <div class="tab-pane active" id="D">About Me</div>
                            </div>
                         </div>
                      </div>
@@ -123,14 +126,12 @@
                <div class="line">.</div>
             </div>
          </div>
-         <div class="row">
+         <div id="footer" class="row">
             <div class="col-md-4"><p>.<p></div>
-            <div class="col-md-6">
-               <a href="#">
+            <div class="col-md-6">               
                   <p>Copyright &copy 2014 Hikmat Dhamee<br/>
-                     Email me: contact@hikmatdhamee.com.np 
+                     Email: contact@hikmatdhamee.com.np 
                   </p>
-               </a>
             </div>
             <div class="col-md-2"></div>
          </div> 
