--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
    <head>
+    <title>Hikmat Dhamee</title>
      <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
         <meta charset="utf-8">  
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -112,7 +113,20 @@
                               <div class="tab-pane" id="C">                              
                                <iframe src="https://docs.google.com/forms/d/1ZYnFFTzojg0jtHJuzcF_F5zx6Eeu6iKtppIrf9t6g8M/viewform?embedded=true" width="760" height="510" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>                           
                               </div>
-                              <div class="tab-pane active" id="D">About Me</div>
+                              <div class="tab-pane active" id="D">
+                                  <div>
+                                       <img style="float:left; margin-right:60px;" src="./img/my_img.png"></img>
+                                       <p style="padding-top:20px;font-family: Arial; background: none; font-weight: bold; font-size:12px">Hi, I am Hikmat Dhamee,<br/> { <br/>
+                                      &nbsp;&nbsp; - a native of Nepal,<br/>
+                                      &nbsp;&nbsp; - a computer science graduate,<br/>
+                                      &nbsp;&nbsp; - an open source lover<br/>
+                                      &nbsp;&nbsp; - a full time coder and hacker,<br/>
+                                      &nbsp;&nbsp; - a java rockstar,<br/>
+                                      &nbsp;&nbsp; Currently rocking  MIMD technologies<br/>
+                                       }                                                                              
+                                    </p>
+                                  </div>
+                              </div>
                            </div>
                         </div>
                      </div>
@@ -129,7 +143,7 @@
          <div id="footer" class="row">
             <div class="col-md-4"><p>.<p></div>
             <div class="col-md-6">               
-                  <p>Copyright &copy 2014 Hikmat Dhamee<br/>
+                  <p>Copyright &copy 2016 Hikmat Dhamee<br/>
                      Email: contact@hikmatdhamee.com.np 
                   </p>
             </div>
