updating linkedin profile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             $(".title").html("BigData Software Engineer (Hadoop/Spark/AWS)");
 
            <!--About Section-->
-            $(".dob").html("19th Century");
+            $(".dob").html("Late 20th Century");
             $(".phone").html("+977-9823113881");
             $(".my_address").html("Kathmandu, Nepal");
             $(".email").html("me.hemant.available@gmail.com");
@@ -125,6 +125,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
              $(".cert1_provider").html("Issued by IBM");
              $(".cert1_desc").html("<a href=\"https://www.youracclaim.com/badges/20f22edb-902b-4f01-8872-1e4162cabdfd/linked_in_profile\" target=\"_blank\">See Credentials</a>");
 
+             <!--Linked link-->
+             $("#linkedin").attr("href","https://np.linkedin.com/in/hikmatdhamee");
 
             });
     </script>
@@ -148,7 +150,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
                     <li><a href="#" data-toggle="modal" data-target="#certifications" class="w3ls-hover"><span data-letters="Certifications">Certifications</span></a></li>
                     <li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="Contact">Contact</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/hikmatdhamee/" class="w3ls-hover" target="_blank"><span data-letters="LinkedIn">LinkedIn</span></a></li>
+                    <li><a href="" id="linkedin" class="w3ls-hover" target="_blank"><span data-letters="LinkedIn">LinkedIn</span></a></li>
                 </ul>
                 <div class="clearfix"> </div>
             </div>
