--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Hikmat Dhamee, Personal Website, Software Engineer, Nepal " />
+
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="images/favicon3232.png">
+
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <!-- Custom Theme files -->
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
