--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             $(".dob").html("Late 20th Century");
             $(".phone").html("+977-9823113881");
             $(".my_address").html("Kathmandu, Nepal");
-            $(".email").html("me.hemant.available@gmail.com");
-            $(".email").attr("href","mailto:me.hemant.available@gmail.com");
+            $(".email").html("contact@hikmatdhamee.com.np");
+            $(".email").attr("href","mailto:contact@hikmatdhamee.com.np");
             $(".about_summary").html("I enjoy working on a team-oriented, software development firm nurturing new technologies and standards in the areas of big data,  cloud computing, distributed computing and programming languages where I can lead a team and deliver significant products.");
             $(".agile-br").html("DON'T MAKE EASY THINGS EASY, MAKE DIFFICULT THINGS POSSIBLE");
 
