--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <!--Introduction-->
             $(".name").html("Hikmat Dhamee");
-            $(".title").html("BigData Software Engineer (Hadoop/Spark/AWS)");
+            $(".title").html("BigData Software Engineer (Hadoop/Spark/AWS)<br> Fitness and Nutrition Enthusiast");
 
            <!--About Section-->
             $(".dob").html("Late 20th Century");
@@ -318,7 +318,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="modal-body modal-spa">
                 <div class="experience w3-agileits-info">
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="expr5_date"></h3>
                             <h5 class="expr5_company"></h5>
@@ -362,7 +362,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <div class="experience-grids w3-agileits">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="expr1_date"></h3>
                             <h5 class="expr1_company"></h5>
@@ -387,9 +387,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">My Qualification</h4>
             </div>
-            <div class="modal-body modal-spa">
+            <div class="modal-body modal-spa ">
                 <div class="experience">
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="edu4_year"></h3>
                             <h5 class="edu4_university"></h5>
@@ -400,7 +400,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="edu3_year"></h3>
                             <h5 class="edu3_university"></h5>
@@ -411,7 +411,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="edu2_year"> </h3>
                             <h5 class="edu2_university"></h5>
@@ -450,7 +450,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="modal-body modal-spa">
                 <div class="experience">
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="cert4_name"></h3>
                         </div>
@@ -461,7 +461,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="cert3_name"></h3>
                         </div>
@@ -472,7 +472,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <div class="experience-grids">
+                    <div class="experience-grids experience-grids-btm">
                         <div class="experience-left">
                             <h3 class="cert2_name"> </h3>
                         </div>
