--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <!--Introduction-->
             $(".name").html("Hikmat Dhamee");
-            $(".title").html("BigData Software Engineer (Hadoop/Spark/AWS)<br> Fitness and Nutrition Enthusiast");
+            $(".title").html("BigData Software Engineer (Hadoop/Spark/AWS)<br>");
 
            <!--About Section-->
             $(".dob").html("Late 20th Century");
