--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
              $(".cert1_desc").html("<a href=\"https://www.youracclaim.com/badges/20f22edb-902b-4f01-8872-1e4162cabdfd/linked_in_profile\" target=\"_blank\">See Credentials</a>");
 
              <!--Linked link-->
-             $("#linkedin").attr("href","https://np.linkedin.com/in/hikmatdhamee");
+             $("#linkedin").attr("href","https://www.linkedin.com/in/mehikmat");
 
              <!--Life in words-->
              var life_in_words = `
