--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <!--Introduction-->
             $(".name").html("Hikmat Dhamee");
-            $(".title").html("Software (Architecture, Design, Development) <br/> Domain (Big Data Analytics, Data Mining, Machine Learning)");
+            $(".title").html("Software: Architecture, Design, Development <br/> (Big Data Analytics, Data Mining, Machine Learning)");
 
             <!--Experience Section-->
             $(".expr8_date").html("Jan 2024 – Present");
