--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!--Linked link-->
             $("#linkedin").attr("href","https://www.linkedin.com/in/mehikmat");
 
+            <!--Github link-->
+            $("#github").attr("href","https://github.com/mehikmat");
+
             <!--Life in words-->
             var life_in_words = `
               <p style="font-size:40px;color: Black;"> <b> Hey :) </b></p><br>
@@ -219,6 +222,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education</span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#certifications" class="w3ls-hover"><span data-letters="Certifications">Certifications</span></a></li>
                         <li><a href="" id="linkedin" class="w3ls-hover" target="_blank"><span data-letters="LinkedIn">LinkedIn</span></a></li>
+                        <li><a href="" id="github" class="w3ls-hover" target="_blank"><span data-letters="Github">Github</span></a></li>
                     </ul>
                     <div class="clearfix"> </div>
                 </div>
