--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             $(".edu4_year").html("2014 - 2017");
             $(".edu4_university").html("Pokhara University (PU)");
             $(".edu4_degree").html("MSc.CS (2 years course)");
-            $(".edu4_desc").html("Master of Science in Computer Science. <br/>");
+            $(".edu4_desc").html("Master of Science in Computer Science. <br/> Passed with Distinction.");
 
             $(".edu3_year").html("2008 - 2012");
             $(".edu3_university").html("Tribhuvan University(TU)");
